# nonprofit_agent

./: .gitignore  __init__.py  main_dirty.py  prompts.py  pyproject.toml  utilities.py
communications_module/: communications_agent.py  prompts.py
emails_module/: emails_agent.py
grants_module/: grants_agent (Copy).py  grants_agent.py  mini_agents.py  rag.py
grants_module/IndexStore/: chroma.sqlite3
grants_module/links_and_documents/: all_links.json  laffcharity_contents.txt  mantay_contents.txt  mosqoy_contents.txt  sacredvalleyproject_contents.txt
