[project]
name = "project1"
version = "0.1.0"
description = "First fully personalized agentic project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.2",
    "grandalf>=0.8",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "langchain-mistralai>=1.1.1",
    "langgraph-checkpoint-postgres>=3.0.2",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "langmem>=0.0.30",
]
